# m2_kiosk_desktop

./: autostart  create_deb_package.sh  dconf-onboard-settings.ini  desktop-items-0.conf  desktop.conf  kiosk-session  lightdm.conf  m2kiosk.desktop  meson.build  monitors.xml  panel  pix.plymouth
DEBIAN/: control  postinst
desktop-directories/: lxde-development.directory  lxde-network.directory
