project('m2-kiosk-desktop',
        version: '0.0.1')

install_data('desktop.conf', install_dir: 'home/m2paypad/.config/lxsession/LXDE-pi/')
install_data('autostart', install_dir: 'home/m2paypad/.config/lxsession/LXDE-pi/')
install_data('wave.jpg', install_dir: 'usr/share/rpd-wallpaper')
install_data('monitor.xml', install_dir: 'home/m2paypad/.config/')
install_data('desktop-items-0.conf', install_dir: 'home/m2paypad/.config/pcmanfm/LXDE-pi/')
install_data('dconf-onboard-settings.ini', install_dir: 'home/m2paypad/.config/dconf/')
install_data('panel', install_dir: 'home/m2paypad/.config/lxpanel/LXDE-pi/panels/')
install_data('splash.png', install_dir: 'usr/share/plymouth/themes/pix/')
install_data('hamburger.png', install_dir: 'usr/share/icons/PiXflat/48x48/places/')

install_subdir('DEBIAN', install_dir: '')
#install_data('m2-kiosk-app', install_dir: get_option('datadir'))





